--- a/index.html
+++ b/index.html
@@ -8,4 +8,8 @@
 </head>
 <body>
     <h1>Hello world</h1>
+    <canvas width="320" height="240" id="canvas">
+        <p>Malheureusement, votre navigateur ne prend pas en charge les canevas.</p>
+    </canvas>
+    <script src="static/script.js"
 </body>
